Fonts and header spacing (fixes #26, fixes #8)

--- a/css/bbw.css
+++ b/css/bbw.css
@@ -2,16 +2,16 @@
 
 @font-face {
   font-family: 'BloombergLBold';
-    src: url("http://www.businessweek.com/assets/type/bloombergl_heavy.eot?#iefix") format('embedded-opentype'),
-       url('http://www.businessweek.com/assets/type/bloombergl_heavy.ttf') format('truetype');
+    src: url("../fonts/bloombergl_heavy.eot?#iefix") format('embedded-opentype'),
+       url('../fonts/bloombergl_heavy.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
   font-family:'BWHaasHead';
-  src: url('http://www.businessweek.com/assets/type/hinted/haas/bwhaasgroteskhead-95black.eot?#iefix') format('eot'),
-     url('http://www.businessweek.com/assets/type/hinted/haas/bwhaasgroteskhead-95black.woff') format('woff'),
-     url('http://www.businessweek.com/assets/type/haas/bwhaasgroteskhead-95black.ttf') format('truetype');
+  src: url('../fonts/bwhaasgroteskhead-95black.eot?#iefix') format('eot'),
+     url('../fonts/bwhaasgroteskhead-95black.woff') format('woff'),
+     url('../fonts/bwhaasgroteskhead-95black.ttf') format('truetype');
 
   font-style: normal;
   font-weight: 700;
@@ -19,18 +19,18 @@
 }
 @font-face {
   font-family:'BWHaasHead75Bold';
-  src: url('http://www.businessweek.com/assets/type/hinted/haas75/bwhaasgroteskhead-75bold.eot?#iefix') format('eot'),
-     url('http://www.businessweek.com/assets/type/hinted/haas75/bwhaasgroteskhead-75bold.woff') format('woff'),
-     url('http://www.businessweek.com/assets/type/haas75/bwhaasgrotesktext-75bold.ttf') format('truetype');
+  src: url('../fonts/bwhaasgroteskhead-75bold.eot?#iefix') format('eot'),
+     url('../fonts/bwhaasgroteskhead-75bold.woff') format('woff'),
+     url('../fonts/bwhaasgrotesktext-75bold.ttf') format('truetype');
   font-style: normal;
   font-weight: 700;
   font-stretch: normal;
 }
 @font-face {
   font-family:'BWHaasRegular';
-  src: url('http://www.businessweek.com/assets/web_fonts/bwhaasgroteskhead-65medium.eot?#iefix') format('eot'),
-     url('http://www.businessweek.com/assets/web_fonts/bwhaasgroteskhead-65medium.woff') format('woff'),
-     url('http://www.businessweek.com/assets/web_fonts/bwhaasgrotesktext-65medium.ttf') format('truetype');
+  src: url('../fonts/bwhaasgroteskhead-65medium.eot?#iefix') format('eot'),
+     url('../fonts/bwhaasgroteskhead-65medium.woff') format('woff'),
+     url('../fonts/bwhaasgrotesktext-65medium.ttf') format('truetype');
   font-style: normal;
   font-weight: 700;
   font-stretch: normal;
@@ -40,11 +40,11 @@
 /* Druk Medium */
 @font-face {
   font-family: 'Druk Web';
-  src: url('Druk-Medium-Web.eot');
-  src: url('Druk-Medium-Web.eot?#iefix') format('embedded-opentype'),
-     url('Druk-Medium-Web.woff') format('woff'),
-     url('Druk-Medium-Web.ttf') format('truetype'),
-     url('Druk-Medium-Web.svg#Druk Web') format('svg');
+  src: url('../fonts/Druk-Medium-Web.eot');
+  src: url('../fonts/Druk-Medium-Web.eot?#iefix') format('embedded-opentype'),
+     url('../fonts/Druk-Medium-Web.woff') format('woff'),
+     url('../fonts/Druk-Medium-Web.ttf') format('truetype'),
+     url('../fonts/Druk-Medium-Web.svg#Druk Web') format('svg');
   font-weight:  500;
   font-style:   normal;
   font-stretch: normal;
@@ -52,11 +52,11 @@
 /* Druk Wide Super */
 @font-face {
   font-family: 'Druk Wide Web';
-  src: url('DrukWide-Super-Web.eot');
-  src: url('DrukWide-Super-Web.eot?#iefix') format('embedded-opentype'),
-     url('DrukWide-Super-Web.woff') format('woff'),
-     url('DrukWide-Super-Web.ttf') format('truetype'),
-     url('DrukWide-Super-Web.svg#Druk Wide Web') format('svg');
+  src: url('../fonts/DrukWide-Super-Web.eot');
+  src: url('../fonts/DrukWide-Super-Web.eot?#iefix') format('embedded-opentype'),
+     url('../fonts/DrukWide-Super-Web.woff') format('woff'),
+     url('../fonts/DrukWide-Super-Web.ttf') format('truetype'),
+     url('../fonts/DrukWide-Super-Web.svg#Druk Wide Web') format('svg');
   font-weight:  900;
   font-style:   normal;
   font-stretch: normal;
@@ -77,7 +77,7 @@ header {
 
 h1 {
   display: inline-block;
-  margin: 0;
+  margin: 5px 0;
   font-family: 'BWHaasHead';
   font-size: 2em;
   line-height: 0.8em;
@@ -92,6 +92,7 @@ h1 a {
   display: inline-block;
   float: right;
   cursor: pointer;
+  margin-top: -2px;
 }
 
 #header-social .social{
